change arrow to position absolute to prevent overflow and scroll

--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -52,7 +52,7 @@
     }
 
     a {
-      position: relative;
+      position: absolute;
       bottom: 10px;
       left: 40%;
 
